--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-slider-task",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://media.qa.begenuin.com",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
